--- a/src/components/CopyWriting/CopyWriting.scss
+++ b/src/components/CopyWriting/CopyWriting.scss
@@ -1,9 +1,29 @@
 $copy-writing-space: 32px;
 $copy-writing-border-radius: 16px;
+$copy-writing-background-color: #F5F5F8;;
+$copy-writing-border-radius: 8px;
+
+$copy-writing-icon-color: #9093BF;
 
 .copyWriting {
   padding: $copy-writing-space;
   display: flex;
   flex-direction: column;
   gap: $copy-writing-space;
+  width: 658px;
+
+  .autoComplete {
+    background-color: $copy-writing-background-color;
+    border-radius: $copy-writing-border-radius;
+
+    & :global(.MuiAutocomplete-inputRoot) {
+      .autoCompleteSearchIcon {
+        color: $copy-writing-icon-color;
+      }
+
+      :global(.MuiOutlinedInput-notchedOutline) {
+        border: none;
+      }
+    }
+  }
 }
