Genie copy suggestion (#3)
* Add GenieCopySuggestion Component

--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyPromotionEditor/CopyPromotionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyPromotionEditor/CopyPromotionEditor.scss
@@ -9,5 +9,10 @@
     display: flex;
     align-items: flex-start;
     gap: 8px;
+
+    .icon {
+      width: 16px;
+      height: 16px;
+    }
   }
 }
