--- a/src/components/CopyWriting/CopyWritingEditor/AdditionalRequestEditor/AdditionalRequestEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/AdditionalRequestEditor/AdditionalRequestEditor.scss
@@ -1,4 +1,4 @@
-@import '../common';
+@import 'src/components/CopyWriting/common';
 
 .additionalRequestEditor {
   @include copyWritingChildComponent;
@@ -26,10 +26,23 @@
           height: 16px;
         }
       }
+
+      .titleButton {
+        color: #6A30D8;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+
+        &:hover {
+          background-color: unset;
+          color: #6A30D8;
+        }
+      }
     }
 
     .closeButton {
-      display: inline-flex;
+      display: none;
       padding: 10px;
       align-items: center;
       border-radius: 30px;
@@ -37,14 +50,28 @@
       color: #000;
       min-width: unset;
 
+      &.closeButtonVisible {
+        display: inline-flex;
+      }
+
+      &:hover {
+        background: #EFE7FF;
+        color: #6A30D8;
+      }
+
       :global(.MuiButton-startIcon) {
         margin: unset;
+
+        .icon {
+          width: 16px;
+          height: 16px;
+        }
       }
     }
   }
 
   .additionalRequestBodyWrapper {
-    display: flex;
+    display: none;
     padding: 16px;
     flex-direction: column;
     justify-content: flex-end;
@@ -54,6 +81,10 @@
     border-radius: 8px;
     border: 1px solid #E0E1F3;
 
+    &.additionalRequestBodyWrapperVisible {
+      display: flex;
+    }
+
     .additionalRequestInput {
       width: 100%;
       color: #757A9B;
@@ -61,6 +92,12 @@
       font-style: normal;
       font-weight: 400;
       line-height: 24px; /* 150% */
+
+      :global(.MuiInputBase-root) {
+        &:before, &:after {
+          border: none;
+        }
+      }
     }
 
     .additionalRequestOptionWrapper {
