--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
@@ -7,5 +7,10 @@
     display: flex;
     align-items: flex-start;
     gap: 8px;
+
+    .icon {
+      width: 16px;
+      height: 16px;
+    }
   }
 }
