Introduce theme font

--- a/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditor.scss
@@ -3,6 +3,10 @@
 .copyTypeEditor {
   @include copyWritingChildComponent;
 
+  .label {
+    @include copyWritingChildComponentLabel;
+  }
+
   .copyTypeEditorButtons {
     display: flex;
     flex-direction: row;
