--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyGenerateOptionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyGenerateOptionEditor.scss
@@ -3,4 +3,7 @@
 .copyGenerateOptionEditor {
    @include copyWritingChildComponent;
 
+   .label {
+      @include copyWritingChildComponentLabel;
+   }
 }
