--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/SynopsisGenerateOptionEditor/SynopsisGenerateOptionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/SynopsisGenerateOptionEditor/SynopsisGenerateOptionEditor.scss
@@ -3,6 +3,10 @@
 .synopsisGenerateOptionEditor {
   @include copyWritingChildComponent;
 
+  .label {
+    @include copyWritingChildComponentLabel;
+  }
+
   .icon {
     width: 16px;
     height: 16px;
