Update redux store and component states

--- a/src/components/CopyWriting/CopyWritingEditor/CopyWritingEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/CopyWritingEditor.scss
@@ -45,6 +45,10 @@ $copy-writing-space: 32px;
         :global(.MuiButton-startIcon) {
           margin: unset;
         }
+
+        &:global(.Mui-disabled) {
+          background: #F5F5F8;
+        }
       }
 
       .resetWrapper {
