--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
@@ -36,6 +36,7 @@
         line-height: 30px; /* 166.667% */
 
         .pre {
+          font-family: inherit;
           margin: unset;
         }
       }
