--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/EditableStateChip/EditableStateChip.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/EditableStateChip/EditableStateChip.scss
@@ -7,7 +7,7 @@
   }
 
   .textFieldWrapper {
-    position: fixed;
+    position: absolute;
     display: flex;
     align-items: center;
     z-index: 1;
@@ -19,7 +19,7 @@
     padding: 12px 16px;
 
     .textField {
-      width: 100%;
+      width: 300px;
       color: rgba(35, 17, 108, 0.50);
       font-family: 'Noto Sans', sans-serif;
       font-size: 16px;
