Introduce Feedback popover component

--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
@@ -102,8 +102,8 @@
       min-width: unset;
 
       &:hover {
-        background: #EFE7FF;
-        color: #6A30D8;
+        //background: #EFE7FF;
+        color: #8138FF;
       }
 
       :global(.MuiButton-startIcon) {
@@ -117,3 +117,4 @@
     }
   }
 }
+
