--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyGenerateOptionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyGenerateOptionEditor.scss
@@ -3,6 +3,11 @@
 .copyGenerateOptionEditor {
    @include copyWritingChildComponent;
 
+   & :global(.MuiButtonBase-root){
+      background-color: #F5F5F8;
+      height: unset;
+    }
+
    .label {
       @include copyWritingChildComponentLabel;
    }
