--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/GenerateOptionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/GenerateOptionEditor.scss
@@ -1,4 +1,8 @@
 @import 'src/components/CopyWriting/common';
 
 .generateOptionEditor {
+    & :global(.MuiButtonBase-root){
+        background-color: #F5F5F8;
+        height: unset;
+      }
 }
