--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
@@ -10,6 +10,11 @@
 
   .copyWritingSuggestionList {
     @include copyWritingChildComponent;
+
+    & :global(.MuiButtonBase-root){
+      background-color: #F5F5F8;
+      height: unset;
+    }
   }
 
   &.emptySuggestion {
