--- a/src/components/CopyWriting/CopyWritingEditor/ContentTitleEditor/ContentTitleEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/ContentTitleEditor/ContentTitleEditor.scss
@@ -4,27 +4,50 @@ $copy-writing-background-color: #F5F5F8;;
 $copy-writing-border-radius: 8px;
 
 $copy-writing-icon-color: #9093BF;
+$copy-writing-padding: 12px;
+
+$copy-writing-focus-color: #6A30D8;
 
 .contentTitleEditor {
   @include copyWritingChildComponent;
   flex: unset;
+  
 
   .label {
     @include copyWritingChildComponentLabel;
   }
+
+
 
   .autoComplete {
     background-color: $copy-writing-background-color;
     border-radius: $copy-writing-border-radius;
 
     & :global(.MuiAutocomplete-inputRoot) {
+      padding: $copy-writing-padding;
+
       .autoCompleteSearchIcon {
         color: $copy-writing-icon-color;
       }
-
+      
+      :global(.MuiAutocomplete-input) {
+        padding: 0px 4px 0px !important;
+        line-height: 24px;
+      }
+      
       :global(.MuiOutlinedInput-notchedOutline) {
         border: none;
       }
+     
+    }
+  }
+
+  .autoComplete:focus-within,
+  .autoComplete:hover
+  {
+    outline: 1px solid $copy-writing-focus-color;
+    .autoCompleteSearchIcon {
+      color: $copy-writing-focus-color;
     }
   }
 }
