--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
@@ -3,10 +3,13 @@
 .copyWordCountEditor {
   @include copyWritingChildComponent;
 
+  
+
   .copyWordChipWrapper {
     display: flex;
     align-items: flex-start;
     gap: 8px;
+    line-height: 24px;
 
     .icon {
       width: 16px;
