--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,10 @@ body > div {
   height: fit-content;
 }
 
+:global(.MuiAutocomplete-popper) {
+  top: 1px !important;
+}
+
 :global {
   --default-neutral-white: #FFF;
 }
-
