--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/CopyGenerateOptionEditor/CopyWordCountEditor/CopyWordCountEditor.scss
@@ -2,11 +2,12 @@
 
 .copyWordCountEditor {
   @include copyWritingChildComponent;
-
+  
   .copyWordChipWrapper {
     display: flex;
     align-items: flex-start;
     gap: 8px;
+    line-height: 24px;
 
     .icon {
       width: 16px;
