--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
@@ -9,6 +9,11 @@
     align-items: flex-start;
     gap: 16px;
     align-self: stretch;
+
+    & :global(.MuiButtonBase-root){
+      background-color: #F5F5F8;
+      height: unset;
+    }
   }
 
   .addButtonWrapper {
@@ -16,9 +21,21 @@
     justify-content: flex-end;
     padding-right: 52px;
 
+    .addCommentButton{
+      background-color: #fff;
+      box-shadow: 0px 4px 30px 0px rgba(102, 101, 116, 0.10);
+
+      :hover {
+        .MuiChip-icon {
+          fill: #6A30D8;
+        }
+      }
+    }
+
     .icon {
       width: 16px;
       height: 16px;
     }
+
   }
 }
