--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -13,6 +13,7 @@ $content-width: 1235px;
 .wrapper {
   height: $wrapper-height;
   //background: linear-gradient($wrapper-background-gradient-angle, $wrapper-background-gradient-start-color $wrapper-background-gradient-start-color-length, $wrapper-background-gradient-end-color $wrapper-background-gradient-end-color-length);
+  display: flex;
 
   .layout {
     display: flex;
@@ -20,6 +21,7 @@ $content-width: 1235px;
     flex-wrap: wrap;
     gap: $layout-space;
     padding: $layout-space;
+    width: 100%;
 
     .header {
       height: $header-height;
