--- a/src/components/GenieTheme/GenieTheme.scss
+++ b/src/components/GenieTheme/GenieTheme.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
+  height: 100%;
 
   .genieThemeSuggestionWrapper {
     @include componentItem;
@@ -14,6 +15,7 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+    flex: 1 0 0;
 
     justify-content: center;
     align-items: center;
