Implement Genie Theme component

--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
@@ -23,7 +23,7 @@
 
     .addCommentButton{
       background-color: #fff;
-      box-shadow: 0px 4px 30px 0px rgba(102, 101, 116, 0.10);
+      box-shadow: 0 4px 30px 0 rgba(102, 101, 116, 0.10);
 
       :hover {
         .MuiChip-icon {
