--- a/src/components/CopyWriting/CopyWritingSuggestions/EmptySuggestion/EmptySuggestion.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/EmptySuggestion/EmptySuggestion.scss
@@ -16,8 +16,11 @@
       border-radius: 50%;
       display: flex;
       padding: 8px;
+      max-width: 42px;
 
       .logo {
+        width: 100%;
+        height: auto;
       }
     }
 
