--- a/src/components/GenieTheme/common.scss
+++ b/src/components/GenieTheme/common.scss
@@ -1,3 +1,11 @@
 @mixin genieThemeChildComponent {
   padding: 32px;
 }
+
+@mixin themeSuggestionChildComponentLabel {
+  color: #23116C;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px; /* 162.5% */
+}
