--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionList.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionList.scss
@@ -16,11 +16,18 @@
     .headerButton {
       padding: 8px 16px;
 
-      color: #C2C2D2;
+      background: #8138FF;
+      color: var(--default-neutral-white, #FFF);
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: 24px; /* 150% */
+
+      &:global(.Mui-disabled) {
+        opacity: unset;
+        color: #C2C2D2;
+        background-color: rgba(0, 0, 0, 0.08);
+      }
 
       :global(.MuiChip-label) {
         padding: unset;
