--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
@@ -7,6 +7,8 @@
   align-items: center;
   flex: 1 0 0;
   background: #F5F5F8;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
 
   .copyWritingSuggestionList {
     @include copyWritingChildComponent;
