--- a/src/components/GenieTheme/GenieTheme.scss
+++ b/src/components/GenieTheme/GenieTheme.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
-  height: 100%;
+  height: fit-content;
 
   .genieThemeSuggestionWrapper {
     @include componentItem;
