minor css details

--- a/src/components/CopyWriting/CopyWriting.scss
+++ b/src/components/CopyWriting/CopyWriting.scss
@@ -4,5 +4,6 @@
   @include componentItem;
   display: flex;
   flex-wrap: wrap;
-  height: fit-content;
+  // height: fit-content;
+  height: 100%;
 }
