--- a/src/components/GenieChat/GenieChat.scss
+++ b/src/components/GenieChat/GenieChat.scss
@@ -1,6 +1,5 @@
-.home{
+.genieChat{
     border-radius: 16px;
-    background-color: #ffffff;
     cursor: pointer;
 
     img {
@@ -20,7 +19,6 @@ body.active-modal {
     right: 0;
     bottom: 0;
     position: fixed;
-    transition: 1s ease;
 }
 
 .overlay {
