--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -35,6 +35,7 @@ $content-width: 1235px;
       flex: 1 0 0;
       overflow: auto;
       height: 100%;
+      border-radius: 16px;
     }
 
     .mainOpenMenu {
