--- a/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditorButton/CopyTypeEditorButton.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditorButton/CopyTypeEditorButton.scss
@@ -5,15 +5,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 26px;
+  padding-left: 16px;
   flex: 1 0 0;
   cursor: pointer;
 
   .headCopy {
+    font-family: 'dxu30';
     color: #C2C2D2;
-    font-size: 24px;
+    font-size: 23px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 32px; /* 133.333% */
   }
 
