--- a/src/components/GenieTheme/GenieTheme.scss
+++ b/src/components/GenieTheme/GenieTheme.scss
@@ -6,18 +6,23 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
-  height: fit-content;
+  // height: fit-content;
+  // height: 100vh;
+  // height: 100dvh;
+  overflow: hidden;
 
   .genieThemeSuggestionWrapper {
     @include componentItem;
     @include genieThemeChildComponent;
+    overflow: hidden;
 
     display: flex;
     flex-direction: row;
     gap: 20px;
-    flex: 1 0 0;
+    // flex: 1 0 0;
 
     justify-content: center;
     align-items: center;
+    height: 100%;
   }
 }
