--- a/src/components/Layout/SideMenu/SideMenu.scss
+++ b/src/components/Layout/SideMenu/SideMenu.scss
@@ -26,12 +26,12 @@ $header-margin-bottom: 4px;
       margin-bottom: $header-margin-bottom;
       gap: 8px;
 
-      .logo {
-        img {
-          width: 17.91px;
-          filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(78deg) brightness(103%) contrast(100%);
-          }
-      }
+      // .logo {
+      //   img {
+      //     width: 17.91px;
+      //     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(78deg) brightness(103%) contrast(100%);
+      //     }
+      // }
 
       .genieWordMarkWrapper {
         // background: #6941FF;
@@ -39,7 +39,7 @@ $header-margin-bottom: 4px;
         .genieWordMark {
           // fill: url('images/genie_wordmark_white.png'), lightgray 0px 0px / 144.608% 100% no-repeat;
           img {
-            width: 59.43px;
+            width: 85px;
           }
         }
       }
