--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'dxu70';
+  src: url(./Font/DXUnigothic-70-KSCpc-EUC-H.woff);
+}
+
+@font-face {
+  font-family: 'dxu30';
+  src: url(./Font/DXUnigothic-30-KSCpc-EUC-H.woff);
+}
+
 html, body {
   height: 100%;
   background: linear-gradient(145deg, #522CBB 0%, #833CF5 60.35%);
