--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
@@ -2,16 +2,22 @@
   border-radius: 8px;
   cursor: pointer;
   color: #0E0B31;
+  max-width: 235px;
 
   &.selected {
     background: #EFE7FF;
     color: #6A30D8;
   }
 
-  .img {
+  .imageWrapper {
     max-width: 235px;
     max-height: 132px;
-    border-radius: 8px;
+
+    .img {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 8px;
+    }
   }
 
   .barItem {
