--- a/src/components/GenieTheme/GenieThemeDialog/GenieThemeWidget/GenieThemeWidget.scss
+++ b/src/components/GenieTheme/GenieThemeDialog/GenieThemeWidget/GenieThemeWidget.scss
@@ -1,1 +1,14 @@
-.genieThemeWidget {}
+.genieThemeWidget {
+  padding: 16px;
+
+  .title {
+    font-size: 26px;
+    color: white;
+  }
+
+  .itemsWrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+  }
+}
