Implement copy writing modal

--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
@@ -3,6 +3,7 @@
   align-self: stretch;
   align-items: flex-start;
   gap: 12px;
+  cursor: pointer;
 
   .copyWritingSuggestionCardWrapper {
     padding: 20px;
