--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionItem/CopyWritingSuggestionItem.scss
@@ -3,13 +3,13 @@
   align-self: stretch;
   align-items: flex-start;
   gap: 12px;
-  cursor: pointer;
 
   .copyWritingSuggestionCardWrapper {
     padding: 20px;
     border-radius: 12px;
     flex: 1 0 0;
     box-shadow: 0px 4px 30px 0px rgba(102, 101, 116, 0.10);
+    cursor: pointer;
 
     .cardHeader {
       padding: 0 0 8px;
@@ -106,11 +106,6 @@
       box-shadow: 0px 4px 30px 0px rgba(102, 101, 116, 0.10);
 
       &:hover {
-        //background: #EFE7FF;
-        color: #8138FF;
-      }
-
-      &:focus {
         color: #8138FF;
       }
 
@@ -120,6 +115,10 @@
         .voteButtonIcon {
           width: 16px;
           height: 16px;
+        }
+
+        .voteButtonIconFilled {
+          color: #8138FF;
         }
       }
     }
