--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
@@ -14,7 +14,7 @@
     max-height: 132px;
 
     .img {
-      max-width: 100%;
+      width: 100%;
       max-height: 100%;
       border-radius: 8px;
     }
