--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestions.scss
@@ -9,6 +9,9 @@
   background: #F5F5F8;
   border-top-right-radius: 16px;
   border-bottom-right-radius: 16px;
+  height: 100%;
+  overflow: auto;
+  position: relative;
 
   .copyWritingSuggestionList {
     @include copyWritingChildComponent;
@@ -27,6 +30,9 @@
     display: flex;
     justify-content: flex-end;
     align-self: stretch;
+    position: fixed;
+    right: 50px;
+    bottom: 48px;
 
     .submitButton {
       display: flex;
