--- a/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditorButton/CopyTypeEditorButton.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/CopyTypeEditor/CopyTypeEditorButton/CopyTypeEditorButton.scss
@@ -7,14 +7,14 @@
   justify-content: center;
   padding-left: 16px;
   flex: 1 0 0;
+  gap: 6px;
   cursor: pointer;
 
   .headCopy {
-    font-family: 'dxu30';
     color: #C2C2D2;
     font-size: 23px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 800;
     line-height: 32px; /* 133.333% */
   }
 
