--- a/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/SynopsisGenerateOptionEditor/SynopsisGenerateOptionEditor.scss
+++ b/src/components/CopyWriting/CopyWritingEditor/GenerateOptionEditor/SynopsisGenerateOptionEditor/SynopsisGenerateOptionEditor.scss
@@ -7,11 +7,11 @@
     background-color: #F5F5F8;
     height: unset;
     width: 280px;
-    pointer-events: none;
+    // pointer-events: none;
 
     p,
     :global(.MuiChip-icon) {
-      color: rgba(0, 0, 0, 0.26) !important;
+      // color: rgba(0, 0, 0, 0.26) !important;
     }
   }
 
