--- a/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
+++ b/src/components/CopyWriting/CopyWritingSuggestions/CopyWritingSuggestionList/CopyWritingSuggestionList.scss
@@ -2,6 +2,7 @@
 
 .copyWritingSuggestionList {
   @include copyWritingChildComponent;
+  gap: 16px;
 
   .copyWritingSuggestionListWrapper {
     display: flex;
@@ -22,8 +23,12 @@
     padding-right: 52px;
 
     .addCommentButton{
+      height: auto;
       background-color: #fff;
       box-shadow: 0 4px 30px 0 rgba(102, 101, 116, 0.10);
+      padding: 12px 16px;
+      font-size: 1rem;
+      line-height: 26px;
 
       :hover {
         .MuiChip-icon {
