--- a/src/components/CopyWriting/common.scss
+++ b/src/components/CopyWriting/common.scss
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 0;
-  gap: 12px;
+  gap: 8px;
   align-self: stretch;
 }
 
 @mixin copyWritingChildComponentLabel {
   color: #23116C;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 26px; /* 162.5% */
+  font-size: 18px;
+  // font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 162.5% */
 }
