--- a/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
+++ b/src/components/GenieTheme/ContentSuggestionList/ContentSuggestionItem/ContentSuggestionItem.scss
@@ -40,7 +40,7 @@
         padding: 4px 8px;
         align-items: center;
         gap: 6px;
-
+        font-weight: 700;
         font-size: 14px;
         line-height: 20px; /* 142.857% */
 
