--- a/src/components/GenieTheme/ThemeSuggestionList/ThemeSuggestionList.scss
+++ b/src/components/GenieTheme/ThemeSuggestionList/ThemeSuggestionList.scss
@@ -56,6 +56,8 @@
         flex-shrink: 0;
         border-radius: 30px;
         background: #8138FF;
+        font-weight: 700;
+        font-size: 18px;
 
         :global(.MuiButton-startIcon) {
           margin: unset;
