--- a/src/components/CopyWriting/CopyWritingDemo/CopyWritingWidget/CopyWritingWidget.scss
+++ b/src/components/CopyWriting/CopyWritingDemo/CopyWritingWidget/CopyWritingWidget.scss
@@ -14,14 +14,48 @@
 
   .copyWritingWrapper {
     position: absolute;
-    top: 190px;
-    left: 140px;
-    width: 450px;
 
     .copyWriting {
       font-size: 20px;
       font-weight: 600;
       color: var(--default-neutral-white, #FFF);
+    }
+
+    &Head {
+      top: 170px;
+      left: 140px;
+      width: 450px;
+    }
+
+    &Body {
+      top: 440px;
+      left: 90px;
+      max-width: 850px;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(8px);
+
+      .copyWriting {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+    }
+
+    &Synopsis {
+      top: 230px;
+      left: 54px;
+      max-width: 700px;
+      height: 90px;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(8px);
+
+      .copyWriting {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+      }
     }
   }
 }
