--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   background: linear-gradient(145deg, #522CBB 0%, #833CF5 60.35%);
+  margin: unset;
 }
 
 body > div:first-child {
