--- a/src/components/CopyWriting/CopyWritingDemo/CopyWritingWidget/CopyWritingWidget.scss
+++ b/src/components/CopyWriting/CopyWritingDemo/CopyWritingWidget/CopyWritingWidget.scss
@@ -4,8 +4,8 @@
   height: 100%;
 
   .backImgWrapper {
-    width: 100%;
-    height: 100%;
+    width: 1920px;
+    height: 1080px;
 
     .img {
       width: 100%;
@@ -16,23 +16,29 @@
     position: absolute;
 
     .copyWriting {
-      font-size: 20px;
+      font-size: 30px;
       font-weight: 600;
       color: var(--default-neutral-white, #FFF);
     }
 
     &Head {
-      top: 178px;
-      left: 140px;
-      width: 450px;
+      top: 270px;
+      left: 200px;
+      display: flex;
+      width: 1000px;
+      height: 90px;
+
+      .copyWriting {
+        align-self: center;
+      }
     }
 
     &Body {
-      top: 448px;
-      left: 90px;
-      max-width: 850px;
+      top: 680px;
+      left: 140px;
+      width: 1300px;
       background: rgba(255, 255, 255, 0);
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(15px);
 
       .copyWriting {
         text-overflow: ellipsis;
@@ -42,12 +48,12 @@
     }
 
     &Synopsis {
-      top: 238px;
-      left: 54px;
-      max-width: 700px;
-      height: 90px;
+      top: 360px;
+      left: 80px;
+      max-width: 1000px;
+      height: 140px;
       background: rgba(255, 255, 255, 0);
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(15px);
 
       .copyWriting {
         text-overflow: ellipsis;
